--- a/package.json
+++ b/package.json
@@ -27,21 +27,17 @@
       ".*": "<rootDir>/node_modules/babel-jest"
     },
     "testEnvironment": "node",
-    "roots": [
-      "packages"
-    ],
-    "transformIgnorePatterns": [
-      "/node_modules/"
-    ],
+    "roots": ["packages"],
+    "transformIgnorePatterns": ["/node_modules/"],
     "coverageDirectory": "./coverage/"
   },
   "devDependencies": {
-    "babel-core": "^6.25.0",
+    "babel-core": "7.0.0-alpha.12",
     "babel-eslint": "^7.2.3",
     "babel-jest": "^20.0.3",
-    "babel-plugin-transform-es2015-block-scoping": "^6.24.1",
+    "babel-plugin-transform-es2015-block-scoping": "7.0.0-alpha.12",
     "babel-preset-env": "^1.6.0",
-    "babel-traverse": "^6.25.0",
+    "babel-traverse": "7.0.0-alpha.12",
     "butternut": "^0.4.6",
     "bytes": "^2.5.0",
     "chalk": "^2.0.1",
