--- a/packages/babili/package.json
+++ b/packages/babili/package.json
@@ -11,11 +11,9 @@
   "bin": {
     "babili": "./bin/babili.js"
   },
-  "keywords": [
-    "babel-preset"
-  ],
+  "keywords": ["babel-preset"],
   "dependencies": {
-    "babel-cli": "^6.24.1",
+    "babel-cli": "7.0.0-alpha.12",
     "babel-preset-babili": "^0.1.4"
   }
 }
