--- a/packages/babili/package.json
+++ b/packages/babili/package.json
@@ -11,18 +11,11 @@
   "bin": {
     "babili": "./bin/babili.js"
   },
-  "keywords": [
-    "babel-preset"
-  ],
+  "keywords": ["babel-preset"],
   "dependencies": {
-<<<<<<< HEAD
-    "babel-cli": "^6.24.1",
-    "babel-preset-babili": "^0.1.4"
-  }
-=======
+    "babel-core": "^6.24.1",
     "babel-preset-babili": "^0.0.12",
-    "babel-core": "^6.24.1"
+    "minimist": "^1.2.0"
   },
   "devDependencies": {}
->>>>>>> 1bc8903... Node API and CLI
 }
