--- a/packages/babili/package.json
+++ b/packages/babili/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "babel-core": "^6.24.1",
     "babel-preset-babili": "^0.0.12",
-    "minimist": "^1.2.0"
+    "yargs-parser": "^5.0.0"
   },
   "devDependencies": {}
 }
