Add tests for cli file/dir and help option

--- a/packages/babili/package.json
+++ b/packages/babili/package.json
@@ -17,5 +17,7 @@
     "babel-preset-babili": "^0.0.12",
     "yargs-parser": "^5.0.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "rimraf": "^2.6.1"
+  }
 }
