--- a/packages/babili/package.json
+++ b/packages/babili/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "babel-core": "^6.24.1",
     "babel-preset-babili": "^0.0.12",
+    "fs-readdir-recursive": "^1.0.0",
+    "output-file-sync": "^2.0.0",
     "yargs-parser": "^5.0.0"
   },
   "devDependencies": {
