Use babel-preset-env alpha

--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "babel-eslint": "^7.2.3",
     "babel-jest": "^20.0.3",
     "babel-plugin-transform-es2015-block-scoping": "7.0.0-alpha.12",
-    "babel-preset-env": "^1.6.0",
+    "babel-preset-env": "2.0.0-alpha.12",
     "babel-traverse": "7.0.0-alpha.12",
     "butternut": "^0.4.6",
     "bytes": "^2.5.0",
